# Cognest

./: .gitignore  README.md  import-data.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.kiro/specs/cognest-mvp/: .config.kiro  design.md  requirements.md
.kiro/specs/cognest-phase2-ai/: .config.kiro  design.md  requirements.md  (+1 more)
.kiro/steering/: coding-discipline.md  lessons-learned.md  project-context.md  terminal-commands.md
docs/: phase3-plan.md  prd.md  restructure-plan.md  tech-architecture.md
docs/design-ref/: articles.html  capture.html  compose.html  discover.html  index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/proptest-regressions/core/: properties.txt
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  cli_agents.rs  mod.rs
src-tauri/src/core/: embedding.rs  frontmatter.rs  git.rs  index.rs  jobs.rs  mod.rs  properties.rs  reflection.rs  repo.rs  settings.rs  watcher.rs
src-tauri/src/core/agents/: curator.rs  mod.rs  reflection.rs  writing.rs
src-tauri/src/core/cli_agents/: context.rs  mod.rs  process_manager.rs
src-tauri/src/core/llm/: deepseek.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/core/rig_agents/: curator.rs  mod.rs  reflection.rs  registry.rs  router.rs  stream_adapter.rs  types.rs  writing.rs
src-tauri/tests/: context_gen.rs  embedding_tool.rs  frontmatter_merge.rs  process_manager.rs  process_output.rs  stream_format.rs  writing_context.rs
src/__tests__/: agent-panel-buffer.test.ts  editor-mode.test.ts  markdown-roundtrip.test.ts  properties.test.ts
src/components/: AISettingsTab.css  AISettingsTab.tsx  AgentPanel.css  AgentPanel.tsx  Editor.css  Editor.tsx  GenerationBar.css  GenerationBar.tsx  NavBar.css  NavBar.tsx  QuickCaptureModal.css  QuickCaptureModal.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  Toast.css  Toast.tsx  ViewRenderer.css  ViewRenderer.tsx  ViewStack.css  ViewStack.tsx  WritingPanel.css  WritingPanel.tsx
src/hooks/: useStartup.ts
src/pages/: Articles.css  Articles.tsx  Capture.css  Capture.tsx  Compose.css  Compose.tsx  Discover.css  Discover.tsx  DiscoverDetail.tsx
src/stores/: appStore.ts  articlesStore.ts  captureStore.ts  composeStore.ts  discoverStore.ts  settingsStore.ts  viewStackStore.ts  viewStore.ts  writingStore.ts
src/styles/: tokens.css
src/utils/: helpers.ts  markdownParser.ts  markdownSerializer.ts
(+8 files in other folders)
