[package]
name = "cognest"
version = "0.1.0"
description = "Cognest - AI Cognitive Workbench"
authors = ["Cognest Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File watching
notify = "7"

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# UUID
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"

# Logging
log = "0.4"

# Platform directories
dirs = "5"

# AI / Embedding
fastembed = "4"

# macOS Keychain
security-framework = "3"

# Encryption (AES-256-GCM for settings file)
aes-gcm = "0.10"
rand = "0.8"

# HTTP client (LLM API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"

# Streaming
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
